src/objects/Tax_Rates__c.object
<CustomObject>
    <description>Holds various tax rates</description>
    <fields>
        <fullName>Admission_tax__c</fullName>
        <label>Admission tax</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Are_PromoChips_Match_Play_Tax_Deductabl__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Are PromoChips, Match Play Tax Deductabl</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Are_RR_Tax_Deductable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Are RR Tax Deductable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bad_debt__c</fullName>
        <label>Bad debt %</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Base_RC_as_of_GGR__c</fullName>
        <label>Base RC as % of GGR</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Comp_room_of_GGR__c</fullName>
        <label>Comp Room % of GGR</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FB_comp_expens__c</fullName>
        <label>FB comp expens</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Other_comp_exp__c</fullName>
        <label>Other comp exp</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Slot_hold__c</fullName>
        <label>Slot hold</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Slot_tax__c</fullName>
        <label>Slot tax</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Slot_volume__c</fullName>
        <label>% Slot volume</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Table_hold__c</fullName>
        <label>Table hold</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Table_tax__c</fullName>
        <label>Table tax</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Table_volume__c</fullName>
        <label>% Table volume</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Percent</type>
    </fields>
    <label>Tax Rates</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Slot_volume__c</columns>
        <columns>Table_volume__c</columns>
        <columns>Admission_tax__c</columns>
        <columns>Are_PromoChips_Match_Play_Tax_Deductabl__c</columns>
        <columns>Are_RR_Tax_Deductable__c</columns>
        <columns>Bad_debt__c</columns>
        <columns>Base_RC_as_of_GGR__c</columns>
        <columns>Comp_room_of_GGR__c</columns>
        <columns>FB_comp_expens__c</columns>
        <columns>Other_comp_exp__c</columns>
        <columns>Slot_hold__c</columns>
        <columns>Slot_tax__c</columns>
        <columns>Table_hold__c</columns>
        <columns>Table_tax__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Caesars Tax Rates Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tax Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>